--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,16 @@ body.dark {
   src: url(../fonts/Hindi_Type.ttf);
 }
 
+@font-face {
+  font-family: 'Bengali_Font';
+  src: url(../fonts/BenSenHandwriting.ttf);
+}
+
+@font-face {
+  font-family: 'Quirlycues_Font';
+  src: url(../fonts/Quirlycues.ttf);
+}
+
 /* Default CSS Changes */
 * {
   box-sizing: border-box;
